# template

./: .env.template  .gitattributes  .gitignore  Makefile  W2_SUGGESTIONS.md  W3_FEATURES_BRAINSTORM.md  W3_SUGGESTIONS.md  W3_SUGGESTIONS_2.md  W4_CHECKLIST_TODOS.md  W4_FFMPEG_FFPROBE_RUST.md
.github/: dependabot.yml
.github/actions/setup-cargo/: action.yml
.github/actions/setup-nodejs/: action.yml
.github/workflows/: cleanup-caches.yml  code-validation.yml  release.yml
configs/bash/: helpers
configs/git/: setup.sh
configs/git/hooks/: pre-commit  pre-push
configs/scripts/: cargo-fmt.sh  generate-openapi-client.sh
modules/backend/: Cargo.toml  http-client.env.json  test.http
modules/backend/.cargo/: audit.toml  config.toml
modules/backend/.sqlx/: query-3d83a77eb6045071ffca79640e911cf972438088aa6d4571b7424da9a353560e.json  query-84625bfa8f4a8b542711acfbb6225befd01bda9333d902736c3960e6459b6c49.json  query-99c6d6546ccb4841eb7c449f99a624041e94034e8729ea7f74844346fbe8c050.json  query-9a781e9d434c81eb53a08e4e97d85eeb077d4e51b1095e0884fb26fcb88c3805.json  query-a394019780f5e6b55abe04cc6518f20b276b95f825cc292db91e4717a3558fb3.json  query-b1ffbdfaf081445155f927cbee97397d0baa8f870c7c630455bf75449ae362fd.json
modules/backend/migrations/: 20260101000001_create_schema_users.sql  20260714000001_create_schema_users.sql
modules/backend/proptest-regressions/presentation/: dto.txt
modules/backend/src/: main.rs
modules/backend/src/application/: auth_service.rs  error.rs  mod.rs
modules/backend/src/data/: constants.rs  mod.rs  user_repository.rs
modules/backend/src/domain/: error.rs  user.rs
modules/backend/src/infrastructure/: auth.rs  config.rs  constants.rs  cors.rs  database.rs  error.rs  jwt.rs  logging.rs  mod.rs  openapi.rs
modules/backend/src/presentation/: auth.rs  common.rs  constants.rs  dto.rs  health.rs  init.rs  middleware.rs  mod.rs  protected.rs  state.rs  utilities.rs  utils.rs
modules/backend/tests/: server.rs
modules/backend/tests/fixtures/: create_user.sql
modules/backend/tests/fixtures/media/: audio_only.m4a
modules/frontend/: .env.template  .gitignore  biome.json  components.json  next.config.ts  package.json  tsconfig.json
modules/frontend/configs/scripts/: generate-openapi.sh
modules/frontend/src/: proxy.ts
modules/frontend/src/app/: globals.css  layout.tsx  page.tsx
modules/frontend/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  search-form.tsx  section-cards.tsx  site-header.tsx  version-switcher.tsx
modules/frontend/src/configs/: constants.ts
modules/frontend/src/hooks/: useAuthData.ts
modules/frontend/src/lib/: auth-client.ts  auth.ts  axios.ts
(+67 files in other folders)
