[package]
version = "0.1.0"
name = "backend"
edition = "2024"
description = "backend for template project"
license = "MIT OR Apache-2.0"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/template"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
axum-test = "21.0"
argon2 = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
headers = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }
cookie = "0.18.1"

